static/css/main.css
/* ... */
.contexted {
    transition: var(--transition);
}

.icon:active {
    opacity: 1;
    transform: scale(1.2);
    transition: var(--transition);
    z-index: 4;
}

.icon:before {
    display: inline-block;
    font-style: normal;
    font-variant: normal;
    line-height: inherit;
    font-weight: 400;
}

.offline {
    opacity: 0.2;
    cursor: not-allowed !important;
}

.offline:hover {
    opacity: 0.2 !important;
}

.icons {
    cursor: default;
    list-style: none;
}

.icons li {
    display: inline-block;
    padding: 0.25em 0.25em;
}

@media screen and (max-width: 320px) {
    .icons li {
        padding: 0.15em 0.15em;
    }
}

.icons li a {
    text-decoration: none;
    position: relative;
    display: block;
    margin: auto;
    width: 3.75em;
    height: 3.75em;
    overflow: visible;
    text-align: center;
    white-space: nowrap;
    cursor: default;
}

.icons li img {
    cursor: pointer;
}

.icons li a:before {
    display: inline-block;
    font-style: normal;
    font-variant: normal;
    line-height: inherit;
    font-weight: 400;
    position: absolute;
    top: 0;
    left: 0;
    width: inherit;
    height: inherit;
    font-size: 1.85rem;
    text-align: center;
    text-indent: 0;
}


/* Main */

#main {
    -moz-backface-visibility: hidden;
    -webkit-backface-visibility: hidden;
    -ms-backface-visibility: hidden;
    backface-visibility: hidden;
    -moz-transform-origin: 50% 50%;
    -webkit-transform-origin: 50% 50%;
    -ms-transform-origin: 50% 50%;
    transform-origin: 50% 50%;
    -moz-transform: rotateX(0deg);
    -webkit-transform: rotateX(0deg);
    -ms-transform: rotateX(0deg);
    transform: rotateX(0deg);
    padding: 4em 2.5em 2.5em 2.5em;
    background: #ffffff;
    border-radius: 16px;
    cursor: default;
    max-width: 100%;
    position: relative;
    text-align: center;
    width: 28em;
    z-index: 1;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15), 0 2px 2px rgba(0, 0, 0, 0.15), 0 4px 4px rgba(0, 0, 0, 0.15), 0 8px 8px rgba(0, 0, 0, 0.15);
    transition: var(--transition);
    will-change: transform;
}

#main:hover {
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.11), 0 2px 2px rgba(0, 0, 0, 0.11), 0 4px 4px rgba(0, 0, 0, 0.11), 0 8px 8px rgba(0, 0, 0, 0.11), 0 16px 16px rgba(0, 0, 0, 0.11), 0 32px 32px rgba(0, 0, 0, 0.11);
    transition: var(--transition);
}

#main .avatar {
    position: relative;
    display: block;
    margin-bottom: 1.5em;
}

#main .avatar img {
    display: block;
    margin: 0 auto;
    border-radius: 100%;
    box-shadow: 0 0 0 1.5em #ffffff;
    width: 40%;
    z-index: 1;
}

#main .avatar:before {
    content: '';
    display: block;
    position: absolute;
    top: 50%;
    left: -2.5em;
    width: calc(100% + 5em);
    height: 3.8px;
    z-index: -1;
    background: #fe9529;
    background: -webkit-linear-gradient(to right, #ffc500, #c21500);
    background: linear-gradient(to right, #ffc500, #c21500);
    background-size: 500% 500%;
    -webkit-animation: RainFlow 30s ease infinite;
    -moz-animation: RainFlow 30s ease infinite;
    -o-animation: RainFlow 30s ease infinite;
    animation: RainFlow 30s ease infinite;
}

@-webkit-keyframes RainFlow {
    0% {
        background-position: 0% 50%
    }
    50% {
        background-position: 100% 50%
    }
    100% {
        background-position: 0% 50%
    }
}

@-moz-keyframes RainFlow {
    0% {
        background-position: 0% 50%
    }
    50% {
        background-position: 100% 50%
    }
    100% {
        background-position: 0% 50%
    }
}

@-o-keyframes RainFlow {
    0% {
        background-position: 0% 50%
    }
    50% {
        background-position: 100% 50%
    }
    100% {
        background-position: 0% 50%
    }
}

@keyframes RainFlow {
    0% {
        background-position: 0% 50%
    }
    50% {
        background-position: 100% 50%
    }
    100% {
        background-position: 0% 50%
    }
}

@media screen and (max-width: 480px) {
    #main {
        padding: 3em 2em 2em 2em;
        width: 100%;
    }
    #main .avatar:before {
        left: -2em;
        width: calc(100% + 4em);
    }
}

#main .signature {
    display: block;
    margin: 0 auto;
    margin-bottom: 0.5em;
    width: 100%;
    opacity: 0.8;
}

body.is-preload #main {
    -moz-transform: rotateX(30deg);
    -webkit-transform: rotateX(30deg);
    -ms-transform: rotateX(30deg);
    transform: rotateX(30deg);
    opacity: 0;
}

#identity {
    transform-style: preserve-3d;
    z-index: 2;
}


/* Footer */

#footer {
    -moz-align-self: -moz-flex-end;
    -webkit-align-self: -webkit-flex-end;
    -ms-align-self: -ms-flex-end;
    align-self: flex-end;
    width: 100%;
    padding: 1.5em 0 0 0;
    color: rgba(255, 255, 255, 0.75);
    cursor: default;
    text-align: center;
}

#footer .copyright {
    margin: 0;
    padding: 0;
    font-size: 0.9em;
    list-style: none;
}

#footer .copyright li {
    display: inline-block;
    margin: 0 0 0 0.45em;
    padding: 0 0 0 0.85em;
    border-left: solid 1px rgba(255, 255, 255, 0.5);
    line-height: 1;
}

#footer .copyright li:first-child {
    border-left: 0;
}


/* Wrapper */

#wrapper {
    display: -moz-flex;
    display: -webkit-flex;
    display: -ms-flex;
    display: flex;
    -moz-align-items: center;
    -webkit-align-items: center;
    -ms-align-items: center;
    align-items: center;
    -moz-justify-content: space-between;
    -webkit-justify-content: space-between;
    -ms-justify-content: space-between;
    justify-content: space-between;
    -moz-flex-direction: column;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -moz-perspective: 2000px;
    -webkit-perspective: 2000px;
    -ms-perspective: 2000px;
    perspective: 2000px;
    position: relative;
    min-height: 100%;
    padding: 1.5em;
    z-index: 0;
}

#wrapper:before {
    content: '';
    display: block;
}

@media screen and (max-width: 360px) {
    #wrapper {
        padding: 0.75em;
    }
}
/* ... */

